Update tag route round-tripping from edit modal on Tag Detail page. ListParcelsByTagID route returning ParcelDto instead of ParcelSimpleDto, Area(Acres) and Account cols added to parcel index grid on Tag Detail page. Some CIMIS references removed to get API building after erroneous gen-all (matching what's in develop).
